2011-10-02 belangeo <belangeo@gmail.com>

    * Added new object : MidiDelAdsr : Midi triggered ADSR envelope with pre-delay.
    - rev 719

2011-09-25 belangeo <belangeo@gmail.com>

    * Updated version number to 0.5.1.
    - rev 713

2011-08-13 belangeo <belangeo@gmail.com>

    * Added new object : CtlScan : Scan for Midi controller number in input.
    - rev 707

-------------------------------------------------------------------------------------

2011-07-31 belangeo <belangeo@gmail.com>

    * rev 702 - pyo 0.5.0 release.

2011-07-31 belangeo <belangeo@gmail.com>

    * Added new objects : NoteinRec and NoteinRead. Records and reads Notein automations.
    - rev 701

2011-08-30 belangeo <belangeo@gmail.com>

    * Added new object : WinTable. Generates different kind of windowing functions. 
    - rev 700

2011-07-22 belangeo <belangeo@gmail.com>

    * Added new function : reducePoints(), apply a Douglas–Peucker curve reduction algorithm. 
      Added loadRecFile() method to table objects.
    - rev 688

2011-07-20 belangeo <belangeo@gmail.com>

    * Added new objects : ControlRec and ControlRead. Records automations at user-defined sampling rate.
    - rev 687

2011-07-18 belangeo <belangeo@gmail.com>

    * Added C impementation of the Looper object.
    - rev 682

2011-07-07 belangeo <belangeo@gmail.com>

    * Added new arithmetic object: Round.
    - rev 675

2011-07-06 belangeo <belangeo@gmail.com>

    * Added new arithmetic object: Floor.
    - rev 674

2011-07-03 belangeo <belangeo@gmail.com>

    * Added new objects: OscDataSend and OscDataReceive.
    - rev 668

2011-06-15 belangeo <belangeo@gmail.com>

    * Added 'feedback' attribute to NewTable object.
    - rev 659

2011-06-14 belangeo <belangeo@gmail.com>

    * New object : TrigTableRec.
    - rev 658

2011-06-02 belangeo <belangeo@gmail.com>

    * Added cartesian to polar and polar to cartesian conversions.
    - rev 655

2011-06-01 belangeo <belangeo@gmail.com>
